--- a/Contact.html
+++ b/Contact.html
@@ -2,14 +2,47 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+     <link rel="icon" href="Style border.png">
     <title>Contact</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
-  <body>
+  <body style="background-color:#D3D3D3">
+
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+       <a class="navbar-brand" href="index.html">Shelby INC</a>
+       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+
+         <ul class="navbar-nav ml-auto">
+
+           <li class="nav-item">
+            <a style="color:white" class="nav-link" href="abot.me.html"><strong> About me </strong></a>
+           </li>
+
+       <li class="nav-item">
+         <a style="color:white" class="nav-link" href="https://biramzos.github.io/se-2017____/"> <strong> Main page </strong> </a>
+
+           </li>
+         </ul>
+    </div>
+    </nav>
+    <center>
+
     <td><h2><em>My contact</em></h2></td>
     <p><em>Phone number : +7(707)8679634
-                      +7(747)1073114</em></p>
-    <p><em>Email adress: aidin00334@gmail.com</em></p>
-    <p><em>Instagram  <a href="https://www.instagram.com/_jn.shel_/"><strong>_jn.shel_</strong></a></em></p>
-    <p><em>VK <a href="https://vk.com/ida.alikhan"><strong>Aidyn Alikhan</strong></a></em></p>
+                         +7(747)1073114</em></p>
+    <p><em> <img src="gmail.jpg" alt="" height="15PX">Gmail adress: aidin00334@gmail.com</em></p>
+    <p><em>Instagram <img src="instagram-brands.svg" width="25px" onclick="location.href='https://www.instagram.com/_jn.shel_/'" alt=""></em></p>
+    <p><em> Vk <img src="vk-brands.svg" width="25px" onclick="location.href='https://vk.com/ida.alikhan'" alt=""> </em></p>
+    <p><em>WhatsApp <img src="whatsapp-square-brands.svg" width="25px" onclick="location.href='https://wa.link/8fn2a6'" alt="">  </em> </p>
+    <p><em>Telegram link<img src="telegram-brands.svg" width="25px" onclick="location.href='https://tlgg.ru/@jnshel'" alt=""> </em></p>
+</center>
   </body>
 </html>
