--- a/index.html
+++ b/index.html
@@ -1,48 +1,69 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta charset="utf-8">
-    <title>Aidyn Alikhan</title>
-  </head>
-  <body>
-
-<tables>
-  <tr>
-  <td><img src="sirus 2.0.png" alt="My photo in profile"height="200">
-   <h1>Alikhan Aidyn Shyngyskhanuly</h1>
-    <p><em>I was born in Sozak, but growing up in Uskonur</em></p>
-    <p><em> I'm 18 years old </em></p>
-  <p><em>Student of <a href="https://astanait.edu.kz/"><strong>AITU</strong></a></em></p> </td>
+<meta charset="utf-8">
+   <link rel="icon" href="Style border.png">
+  <title>Shelby INC</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
 
-    </tr>
-  </tables>
+</head>
+<body style="background-color:#D3D3D3">
 
-<hr>
-<h3>My education</h3>
-<ul>
-  <li>1st grade Gymnasium named after Abay</li>
-  <li>2-3 class school of Ushkonyr</li>
-  <li>4-11 grade school gymnasium Ushkonyr</li>
-  </ul>
 
-  <hr>
-  <h4>My hobby</h4>
-    <ul>
-  <li>School Debate League of Almaty city</li>
-  <li>Cars, and repair of cars</li>
-  <li>Computers and phones</li>
-  </ul>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+   <a style="color:white" class="navbar-brand" href="#">Shelby INC</a>
+   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+  <span class="navbar-toggler-icon"></span>
+  </button>
 
- <hr>
- <h5>My project's</h5>
-<ul>
-  <li> Organizer "Debate tournament Gymnasium Cap 5"</li>
-  <li>Organizer "Debate tournament Gymnasium Cap 6"</li>
-  <li>Instagram contest for the 6th anniversary of the club</li>
-  <li>Organizer of school dances and New Year's Eve</li>
-</ul>
-<br>
-<a href="Contact.html">Contact</a>
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+
+     <ul class="navbar-nav ml-auto">
+       <li class="nav-item">
+         <a style="color:white" class="nav-link" href="Contact.html"><strong>Contact</strong></a>
+       </li>
+
+       <li class="nav-item">
+        <a  style="color:white "class="nav-link" href="abot.me.html"><strong>About me</strong></a>
+       </li>
+
+   <li class="nav-item">
+     <a style="color:white" class="nav-link" href="https://biramzos.github.io/se-2017____/"> <strong>Main page</strong> </a>
+
+       </li>
+     </ul>
+</div>
+</nav>
+
+<div class="out" align="center">
+<div class="" style="width:60% ">
+<table>
+<tr>
+<td>
+  <img src="sdu cup 1.png" alt="My photo"height="200" style="align-item:.center">
+<td><h1 style="color:Black">Aidyn Alikhan Shyngyskhanuly</h1>
+<p style="color:black"> <front face="Comic Sans MS,Arial"> Student of <a style="color:Black" href="https://astanait.edu.kz/">AITU</a></p></td>
+</td>
+</tr>
+</table>
+<hr style="background-color:black; border-width:4px" >
+<h2>Education</h2>
+
+<img src="school-solid.svg" alt="10px" height="15px" <p><em> Abay Gymnasium 2008-2010 years </em></p>
+<img src="school-solid.svg" alt="2" height="15PX"<p><em> Ushkonyr secondary school 2010-2012 years </em></p>
+<img src="school-solid.svg" alt="3" height="15px" <p><em> Ushkonyr Gymnasium 2012-2020 years </em></p>
+<img src="university-solid.svg" alt="4" height="15px" <p><em> Astana IT University 2020-2003 years </em></p>
+<hr style="background-color:Black; border-width:4px">
+<h3>My Hoobies</h3>
+<p><em><img src="tesla.png" alt="tesla" height="15px">Cars/cars repair</em></p>
+<p><em><img src="debate.png" alt="debate" height="15px">School debate league of Almaty city</em></p>
+<p><em><img src="unnamed.jpg" alt="game" height="15px">Video Games</em></p>
+<p><em><img src="netflix.png" alt="" height="20px"> I love movies and anime</em></p>
+</div>
+</div>
   </body>
-</html>
+  </html>
